<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="title_main_activity">Items</string>
    <string name="title_main_detail">Item Detail</string>
    <string name="estate_picture_description">Estate photo</string>
    <string name="photos">Photos</string>
    <string name="surface">Surface (m²)</string>
    <string name="number_rooms">Number of rooms</string>
    <string name="price_dollar">Price ($)</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="surface_description">Surface picture</string>
    <string name="rooms_description">Rooms picture</string>
    <string name="price_description">Price picture</string>
    <string name="location_description">Location picture</string>
    <string name="photo_description">Room photo</string>
    <string name="points_of_interest">Points of interests</string>
    <string name="available">Available</string>
    <string name="agent">Agent</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="agent_description">Agent picture</string>
    <string name="Available_description">Available picture</string>
    <string name="poi_description">Points of interests picture</string>
    <string name="address">Address</string>
    <string name="type">Type</string>
    <string name="school">School</string>
    <string name="park">Park</string>
    <string name="supermarket">Supermarket</string>
    <string name="sold">Sold</string>
    <string name="number">Number</string>
    <string name="route">Route</string>
    <string name="postcode">Postcode</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="done">Done</string>
    <string name="add_photo">Add photo</string>
    <string name="estate_photo">Estate photo</string>
    <string name="need_storage_permission_message">RealEstateManager needs to access your library and storage.</string>
    <string name="find">Search around</string>
    <string name="ok">OK</string>
    <string name="internet_required">Internet required !</string>
    <string name="internet_required_detail">RealEstateManager needs to be connected to the internet to show you the map.</string>
    <string name="required_location">Location required !</string>
    <string name="required_location_detail">RealEstateManager needs your location to show estates on map !</string>
    <string name="search">Advanced search</string>
    <string name="add_an_estate">Add an estate</string>
    <string name="around">Around</string>
    <string name="distance">Max distance (km)</string>
    <string name="order_by">Order by</string>
    <string name="title_searchresultactivity_list">SearchResult</string>
    <string name="title_searchresultactivity_detail">SearchResultActivity Detail</string>
    <string name="error">Error !</string>
    <string name="error_occurred">An error occurred while performing action.</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="not_a_number_error">All values must be numbers !</string>
    <string name="loan_result_text">Borrowed capital: %1$s\nMonthly payment: %2$s\nRendering: %3$s\nInterests: %4$s</string>
    <string name="calculate">Calculate</string>
    <string name="contribution">Contribution</string>
    <string name="rate">Rate</string>
    <string name="duration_year">Duration (Year)</string>
    <string name="needed_amount">Needed amount</string>
    <string name="price_euro">Price (€)</string>
    <string name="simulate_loan">Simulate a real estate loan</string>
    <string name="save">Save</string>
    <string name="complete_form">Please, complete the form !</string>
</resources>
